# Tome

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SDL.md  docker-compose.yml  greptile.json  lint-staged.config.js  package-lock.json  package.json
backend/: CLAUDE.md  Cargo.toml  clippy.toml
backend/.sqlx/: query-0049f183c608d17f9b30dcc71be786bf372d51bdbdf6bce86a9bbf74ae74b7c4.json  query-00ac7be4df08d6e220d59d4e03aeb98dc8789fcd67e88e66e6dddaeec0481a58.json  query-010967df019e654a7a6d5d8ba8f622620597d3bc042f7a00a8e3fb60e91c403b.json  query-018c0d9ade2d6f69fc38f13f5abf511a52230278918074537858db2aa7fae2ba.json  query-05189b41b940f248476fafb6a56ac465356cab3447065ec0d482cfdb48cbbd84.json  query-05283a73ba1d73760f4c62f43d6be6e39c026550a8900819407816b4daf83715.json  query-07113a2ec6fad3790744994ab3f74c3f7bfe59ec4ddf547e90e2386e1a5425db.json  query-0744000cf09324be33a5f4fc20cfa37d8abb047deef9ee72a9bfcfb496d205ca.json  query-0814c6d0b7956b4c232ed70613af47db9c273aca34a841df7f22c2cbc6da080a.json  query-0815192a01079231f3270073d1d93c9e90ab32798bb881d376b21f9be280d736.json  query-09d2cd0d3af093b52368d3e2cd15124eb1c35bcc2dfcedbfb1fb10bfc92ba580.json  query-0b6910d4799c620768b12c56c64f21c62d5a923433a483fddbacf13cd2e04823.json  query-0ba6fa61c3c35fac578f408ff5e3b0ec1224a117e3b022327f51f591be658173.json  query-0dbcc64ee762c5344cd464e2a02db37197080302b7f9b56545db2c02aa1ee5d3.json  query-1139945cf5d5e0819168ef4c43d01595f3b752e0f8150e6ac59c6f1e9e63ace3.json  query-122b19352d91aaeaaab9afdeec97bbb60fca7cd10e86c059729eea4b86a6c2b0.json  query-1308ef6d0efa3a5c52dd7f5d18723076c6c0e267b322d1f5020eb025ec18354c.json  query-13e9c519ef2d1a2ab46ac658ba9466d5872064ff067d5a7b5616d3010179150c.json  query-147898d5b99a30bec55d59303b93042c596c6a97586b85c92798d20a71996f2e.json  query-1543cd201233f86d8b089d428e14cc27d1db36edbd00129323be6f04e55a24e8.json  query-1740ad60b509ce96be088bcc091b0ef77d86f6dec9f87f8c0ed9f62d0fe3df9d.json  query-1802c26d558e2bbc7f5482bde32469c4ad5c710e66d1400e4dcdbea3dabe8db9.json  query-18a6997f80898f2f08476c022e3c85b52da7d9fcaad7262cc1bdca0ccfd6844b.json  query-1b924053be67eb50e6a06269ae43a860991edf34621d6e8a5a38c7ec67f1c1c4.json  query-1d13a92a213e67a7c4f088a75711dfa4de3eb5c82b45abd79306b21f0677ad8c.json  query-1f1e75fddf3696212d652830cd5caed1187fff105c626694e59c2259319b3513.json  query-23249f487fea17c3f8436b3e9f02f4629ddaec01c3b55630fb784551dd23d57e.json  query-23a31ef387b98b52c593c8ed4d5ce38349c55287ebd82a4a19353e13541f787f.json  query-2632350fe913d6087e0548720f4b09b0739b886b81ab4b101253fcb424c572da.json  query-27a59d49bd7ee5f33b90b39ef82e24540673a35b5137f36543a0f25f0cc4fc7f.json  query-28e5b4cb75fe96942b3daceb4d9400f1d439957b66ea1437ec8726574c7e778b.json  query-2b3dbf0f2ffae0c3af2e6c65ff807c9a55871270f5129e5b8a87b2f07b71e45c.json  query-2c6539597b5adea735a0c993fec9270792456dd75eb9f05a75dbab93c4ae8042.json  query-2d8a3012e62a0feb7d597476e02fa1e0330ef7711f09238440485107803ee926.json  query-2dff0f83a617704a03aac3ff285793365bc802da383efaaf154f95f1ef43db30.json  query-2edbbecfef72d0301abf214e9da8b8d855616447106902973ff84939c6c08ee4.json  query-2f312a1ec1f7899efc53bf7387669bd70ffae425671abe49fc1dfbd1eaf44f32.json  query-2f6091eb23771fff4364cb2d865e42d0a701c424b90a461f01501e9f31488816.json  query-307e6e9504843f5ec356b6472f483aaf2ff74ee11a68e3aea68dff928362ea97.json  query-3389175c2ad0545debda51c71768b9756602c40e2644e3e335192c7743cab196.json  (+173 more)
backend/migrations/: 20260412150001_extensions_enums_and_roles.down.sql  20260412150001_extensions_enums_and_roles.up.sql  20260412150002_core_tables.down.sql  20260412150002_core_tables.up.sql  20260412150003_series_and_metadata.down.sql  20260412150003_series_and_metadata.up.sql  20260412150004_user_features.down.sql  20260412150004_user_features.up.sql  20260412150005_system_tables.down.sql  20260412150005_system_tables.up.sql  20260412150007_search_rls_and_reserved.down.sql  20260412150007_search_rls_and_reserved.up.sql  20260415000002_unique_authors_series.down.sql  20260415000002_unique_authors_series.up.sql  20260415000003_unique_hash_and_drafts.down.sql  20260415000003_unique_hash_and_drafts.up.sql  20260416000001_remove_invalid_validation_status.down.sql  20260416000001_remove_invalid_validation_status.up.sql  20260417000001_add_enrichment_pipeline.up.sql  20260417000002_grant_field_locks_select_ingestion.down.sql  20260417000002_grant_field_locks_select_ingestion.up.sql  20260506000001_metadata_versions_new_value_not_null.down.sql  20260506000001_metadata_versions_new_value_not_null.up.sql  20260506000002_metadata_versions_confidence_score_not_null.down.sql  20260506000002_metadata_versions_confidence_score_not_null.up.sql  20260507000001_tower_sessions_postgres_store.down.sql  20260507000001_tower_sessions_postgres_store.up.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  test_support.rs
backend/src/auth/: backend.rs  basic_only.rs  middleware.rs  mod.rs  oidc.rs  theme_cookie.rs  token.rs
backend/src/models/: device_token.rs  enrichment_status.rs  ingestion_job.rs  ingestion_status.rs  manifestation_format.rs  mod.rs  reading_state.rs  role.rs  theme_preference.rs  user.rs  work.rs
backend/src/routes/: auth.rs  enrichment.rs  health.rs  ingestion.rs  metadata.rs  mod.rs  spa.rs  tokens.rs
backend/src/routes/opds/: covers.rs  cursor.rs  download.rs  feed.rs  library.rs  opensearch.rs  root.rs  scope.rs  shelves.rs  tests.rs  xml.rs
backend/src/security/: csp.rs  dist_validation.rs  headers.rs  mod.rs
backend/src/services/: mod.rs
backend/src/services/covers/: cache.rs  error.rs  extract.rs  mod.rs  resize.rs
backend/src/services/enrichment/: cache.rs  confidence.rs  cover_download.rs  dry_run.rs  field_lock.rs  http.rs  mod.rs  orchestrator.rs  policy.rs  queue.rs
backend/src/services/epub/: container_layer.rs  cover_layer.rs  mod.rs  opf_layer.rs  repack.rs  repair.rs  xhtml_layer.rs  zip_layer.rs
backend/src/services/ingestion/: cleanup.rs  copier.rs  format_filter.rs  mod.rs  orchestrator.rs  (+3 more)
backend/tests/: cookie_jar_sanity.rs
(+156 files in other folders)
