[package]
name = "tome-api"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Tome ebook library manager — API server"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "20"
