[package]
name = "reverie-api"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Reverie ebook library manager — API server"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-login = "0.18"
base64ct = { version = "1.8.3", features = ["std"] }
dotenvy = "0.15.7"
encoding_rs = "0.8"
futures = "0.3"
governor = "0.10"
hickory-resolver = "0.26"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
notify = "8.2.0"
openidconnect = { version = "4.0.1", features = ["reqwest"] }
quick-xml = "0.39.2"
rand = "0.10"
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
subtle = "2.6.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
percent-encoding = "2.3.2"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "8"

[dev-dependencies]
axum-test = "20"
# chrono: backend/CLAUDE.md mandates the `time` crate over `chrono` in
# production code. Documented dev-only exception: openidconnect 4.x's
# CoreIdTokenClaims::new signature accepts `chrono::DateTime<Utc>` for
# `exp` / `iat`, with no `time`-crate alternative. Confined to test
# scaffolding under `#[cfg(test)]` and dev-deps; production code path
# in `src/auth/oidc.rs` uses no chrono.
chrono = "0.4.44"
rand_core_06 = { package = "rand_core", version = "0.6", features = ["std", "getrandom"] }
rsa = { version = "0.9", features = ["pem"] }
wiremock = "0.6"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic lints inappropriate for application crates (vs library crates).
# See adr/2026-05-03-strict-lint-policy.md for rationale.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# Project-specific hard rules from backend/CLAUDE.md.
unwrap_used = "deny"
expect_used = "deny"
let_underscore_must_use = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
undocumented_unsafe_blocks = "deny"
todo = "warn"
unimplemented = "warn"
