[package]
name = "reverie-api"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Reverie ebook library manager — API server"

# Library + binary split (UNK-191 / Phase 0 of the tiered comment-policy
# rollout — see adr/2026-05-08-tiered-comment-policy.md). The library
# carries every module so that `missing_docs` and the clippy pedantic
# doc lints fire on externally-reachable items; the binary is a thin
# entry that calls `reverie_api::run()` under `#[tokio::main]`.
[lib]
name = "reverie_api"
path = "src/lib.rs"

[[bin]]
name = "reverie-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-login = "0.18"
base64ct = { version = "1.8.3", features = ["std"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
futures = "0.3.32"
governor = "0.10.4"
hickory-resolver = "0.26.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
notify = "8.2.0"
openidconnect = { version = "4.0.1", features = ["reqwest"] }
quick-xml = "0.39.3"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
subtle = "2.6.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros", "migrate"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.2", features = ["full"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.10", features = ["cors", "fs", "trace"] }
tower-sessions = "0.14"
# Despite the version-number divergence, tower-sessions-sqlx-store 0.15
# is what pairs with tower-sessions 0.14 — both depend on
# tower-sessions-core 0.14. The 0.14.x line of tower-sessions-sqlx-store
# pins tower-sessions-core 0.13 and is compile-incompatible with
# tower-sessions 0.14. Coordinated bump required when tower-sessions
# advances to 0.15. ADR: adr/2026-05-08-tower-sessions-sqlx-store.md.
# UNK-101 tracks the eventual coordinated bump (blocked on axum-login#320).
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
percent-encoding = "2.3.2"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = "8.6.0"

[dev-dependencies]
axum-test = "20"
# chrono: backend/CLAUDE.md mandates the `time` crate over `chrono` in
# production code. Documented dev-only exception: openidconnect 4.x's
# CoreIdTokenClaims::new signature accepts `chrono::DateTime<Utc>` for
# `exp` / `iat`, with no `time`-crate alternative. Confined to test
# scaffolding under `#[cfg(test)]` and dev-deps; production code path
# in `src/auth/oidc.rs` uses no chrono.
chrono = "0.4.44"
rand_core_06 = { package = "rand_core", version = "0.6", features = ["std", "getrandom"] }
rsa = { version = "0.9.10", features = ["pem"] }
wiremock = "0.6.5"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic lints inappropriate for application crates (vs library crates).
# See adr/2026-05-03-strict-lint-policy.md for rationale.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# Pedantic lints that newly fire after the lib/bin split (UNK-191 / Phase
# 0 of the tiered comment-policy rollout). Pre-split, every module pub
# item was crate-internal and these lints were silent. Post-split they
# surface 28 pre-existing instances. Allowed during Phases 0–3; Phase 4
# of the rollout (after the per-module docstring backfill) addresses
# them alongside re-enabling missing_errors_doc. Tracked in UNK-190.
too_long_first_doc_paragraph = "allow"
implicit_hasher = "allow"

# Project-specific hard rules from backend/CLAUDE.md.
unwrap_used = "deny"
expect_used = "deny"
let_underscore_must_use = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
undocumented_unsafe_blocks = "deny"
todo = "warn"
unimplemented = "warn"
